Use Java16 `Stream::toList` (#7482)