@@ -15,7 +15,6 @@ package tech.pegasys.teku.api;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import tech.pegasys.teku.api.response.v1.node.Direction;
 import tech.pegasys.teku.api.response.v1.node.Peer;
 import tech.pegasys.teku.api.response.v1.node.State;
@@ -81,15 +80,15 @@ public class NetworkDataProvider {
   }
 
   public List<Peer> getPeers() {
-    return network.streamPeers().map(this::toPeer).collect(Collectors.toList());
+    return network.streamPeers().map(this::toPeer).toList();
   }
 
   public List<Eth2Peer> getEth2Peers() {
-    return network.streamPeers().collect(Collectors.toList());
+    return network.streamPeers().toList();
   }
 
   public List<Eth2Peer> getPeerScores() {
-    return network.streamPeers().collect(Collectors.toList());
+    return network.streamPeers().toList();
   }
 
   public Optional<Peer> getPeerById(final String peerId) {
